[package]
name = "pq_drse_lib"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "File-bound receiver validation and sender authenticity using hpke-rs with ML-KEM-768, RustCrypto provider, ML-DSA-65, and SHAKE256"
#rust-version = "1.85"

[lib]
name = "pq_drse_lib"
path = "src/lib.rs"

[[bin]]
name = "drse_keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "drse_producer"
path = "src/bin/producer.rs"

[[bin]]
name = "drse_consumer"
path = "src/bin/consumer.rs"

[dependencies]
base64 = "0.22.1"
getrandom = "0.3"
hmac = "0.13.0"
hpke-rs = "0.6.1"
hpke-rs-rust-crypto = "0.6.1"
ml-dsa = { version = "0.1.0", features = ["getrandom", "rand_core", "alloc", "zeroize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
shake = "0.1"
sha2 = "0.11.0"
subtle = "2.6"
thiserror = "2.0.17"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
hex = "0.4"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
